--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,15 +1,10 @@
-$font-size-base: 1.2rem;
+@import "variables";
 @import "~bootstrap/scss/bootstrap-reboot";
-@import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/forms";
+@import "~bootstrap/scss/input-group";
 @import "~bootstrap/scss/buttons";
 @import "~bootstrap/scss/button-group";
 @import "~bootstrap/scss/utilities";
-
-.app {
-  background: green;
-  height: 100vh;
-  width: 100vw;
-  overflow: auto;
-  display: flex;
-}
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "app";
