--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -1,5 +1,12 @@
+html,
+body,
+#app,
 .app {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.app {
   overflow: auto;
 }
